[autorelease] v1.0.4
